--- a/package.json
+++ b/package.json
@@ -6,14 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "client-install": "npm install --prefix client",
-    "build": "concurrently \"cd client && npm run build\" \"npm build \"",
-    "client": "cd ./client && npm start ",
-    "server-prod": "node server.js",
-    "server": "node server.js",
-    "start:dev": "concurrently --kill-others  \"npm run client\" \"npm run server\" ",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
